--- a/course_schedule.qmd
+++ b/course_schedule.qmd
@@ -10,36 +10,36 @@ title: "Course schedule"
 
 | block   	| start    	| end      	| subject                        	|
 |---------	|----------	|----------	|--------------------------------	|
-| introduction 	| 9:15 AM  	| 9:30 AM 	| [Introduction](day1/day1-1_setup.qmd) |
-| block 1 	| 9:30 AM  	| 10:15 AM 	| [Introduction scRNAseq](day1/day1-1_setup.qmd) |
+| introduction 	| 9:15 AM  	| 9:30 AM 	| [Introduction](ipynb/day1-1_setup.ipynb) |
+| block 1 	| 9:30 AM  	| 10:15 AM 	| [Introduction scRNAseq](ipynb/day1-1_setup.ipynb) |
 |         	| 10:15 AM 	| 10:45 AM 	| BREAK                          	|
 | block 2 	| 10:45 AM 	| 12:00 PM 	| Presentation: Andreia Gouvêa, 10X Field Application Scientist 	     |
 |         	| 12:00 PM 	| 1:00 PM  	| BREAK                          	|
-| block 3 	| 1:00 PM  	| 3:00 PM  	| [Cell Ranger and Quality Control](day1/day1-2_analysis_tools_qc.qmd)             	 |
+| block 3 	| 1:00 PM  	| 3:00 PM  	| [Cell Ranger and Quality Control](ipynb/day1-2_analysis_tools_qc.ipynb)             	 |
 |         	| 3:00 PM  	| 3:30 PM  	| BREAK                          	|
-| block 4 	| 3:30 PM  	| 5:00 PM  	| [Normalization and Scaling](day1/day1-3_normalization_scaling.qmd)                  
+| block 4 	| 3:30 PM  	| 5:00 PM  	| [Normalization and Scaling](ipynb/day1-3_normalization_scaling.ipynb)                  
 
 
 ## Day 2
 
 | block   	| start    	| end      	| subject                             	|
 |---------	|----------	|----------	|-------------------------------------	|
-| block 1 	| 9:15 AM  	| 10:30 AM 	| [Dimensionality Reduction](day2/day2-1_dimensionality_reduction.qmd) and [Intergration](day2/day2-2.integration.qmd)	|
+| block 1 	| 9:15 AM  	| 10:30 AM 	| [Dimensionality Reduction](ipynb/day2-1_dimensionality_reduction.ipynb) and [Intergration](ipynb/day2-2.integration.ipynb)	|
 |         	| 10:30 AM 	| 11:00 AM 	| BREAK                               	|
-| block 2 	| 11:00 AM 	| 12:30 PM 	| [Clustering](day2/day2-3_clustering.qmd)  |
+| block 2 	| 11:00 AM 	| 12:30 PM 	| [Clustering](ipynb/day2-3_clustering.ipynb)  |
 |         	| 12:30 PM 	| 1:30 PM  	| BREAK                               	|
-| block 3 	| 1:30 PM  	| 3:00 PM  	| [Cell annotation](day2/day2-4_cell_annotation.qmd)     	|
+| block 3 	| 1:30 PM  	| 3:00 PM  	| [Cell annotation](ipynb/day2-3_clustering.ipynb)     	|
 |         	| 3:00 PM  	| 3:30 PM  	| BREAK                               	|
-| block 4 	| 3:30 PM  	| 5:00 PM  	| [Visualization & further exercises](day2/day2-5_.visualization.qmd) 	|
+| block 4 	| 3:30 PM  	| 5:00 PM  	| [Visualization & further exercises](ipynb/day2-4.visualization.ipynb) 	|
 
 ## Day 3
 
 | block   	| start    	| end      	| subject                             	|
 |---------	|----------	|----------	|-------------------------------------	|
-| block 1 	| 9:15 AM  	| 10:30 AM 	| [Transcription factor analysis](day3/day3-1_tf.qmd) and [cell-cell communication](day3/day3-2_cc.qmd)	|
+| block 1 	| 9:15 AM  	| 10:30 AM 	| [Transcription factor analysis](ipynb/day3-1_tf.ipynb) and [cell-cell communication](ipynb/day3-2_cc.ipynb)	|
 |         	| 10:30 AM 	| 11:00 AM 	| BREAK                               	|
-| block 2 	| 11:00 AM 	| 12:30 PM 	| [Trajectory Inference](day3/day3-3_trajectory_analysis.qmd)            	|
+| block 2 	| 11:00 AM 	| 12:30 PM 	| [Trajectory Inference](day3/day3-3_trajectory_analysis.ipynb)            	|
 |         	| 12:30 PM 	| 1:30 PM  	| BREAK                               	|
-| block 3 	| 1:30 PM  	| 3:00 PM  	| [RNA velocity](day3/day3-4_velocity1.qmd)  |
+| block 3 	| 1:30 PM  	| 3:00 PM  	| [RNA velocity](ipynb/day3-4_velocity1.ipynb)  |
 |         	| 3:00 PM  	| 3:30 PM  	| BREAK                               	|
-| block 4 	| 3:30 PM  	| 5:00 PM  	| [RNA velocity](day3/day3-4_velocity2.qmd) 	|
+| block 4 	| 3:30 PM  	| 5:00 PM  	| [RNA velocity](ipynb/day3-4_velocity2.ipynb) 	|
