Add html for exercise answers, first attempt

--- a/ipynb/day1-2_analysis_tools_qc.ipynb
+++ b/ipynb/day1-2_analysis_tools_qc.ipynb
@@ -13,7 +13,7 @@
    "id": "fbb52fa0-2e18-4572-a2c8-ad97cd71bdc8",
    "metadata": {},
    "source": [
-    "Today, you will begin to learn about the standard workflow for analyzing scRNA-seq count data in Python. As single cell data is complex and often tailored to the particular experimental design, so there is not one “correct” approach to analyzing these data. However, certain steps have become accepted as a sort of standard \"best practice.\" \n",
+    "In this exercise, you will begin to learn about the standard workflow for analyzing scRNA-seq count data in Python. As single cell data is complex and often tailored to the particular experimental design, so there is not one “correct” approach to analyzing these data. However, certain steps have become accepted as a sort of standard \"best practice.\" \n",
     "\n",
     "A useful overview on the current best practices is found in the articles below, which we also borrow from in this tutorial. We thank the authors for compiling such handy resources!\n",
     "\n",
@@ -186,15 +186,28 @@
    "id": "435c0aa5-f914-41bd-ae2b-e201ee64e1ef",
    "metadata": {},
    "source": [
-    "**Answer:** typing `adata` should return:\n",
-    "\n",
+    "<button onclick=\"toggleVisibility('answer1')\">Click for Answer</button>\n",
+    "<div id=\"answer1\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong> typing <code>adata</code> should return:\n",
+    "<pre>\n",
     "    AnnData object with n_obs × n_vars = 6946 × 33694\n",
     "    obs: 'sample'\n",
-    "\n",
+    "</pre>\n",
     "You can also confirm the number of observations (cells) and variables (genes/features) using the commands below:\n",
-    "\n",
+    "<pre>\n",
     "    adata.n_obs # number of cells\n",
-    "    adata.n_vars # number of genes"
+    "    adata.n_vars # number of genes\n",
+    "</pre>\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
    ]
   },
   {
@@ -383,18 +396,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11df770b-728a-493a-9949-0439e49d0254",
+   "id": "d10a8b61-ee92-4e63-aef6-3235c7cd1307",
    "metadata": {},
    "source": [
-    "**Answer:** You can run the command `adata.obs[\"sample\"].value_counts()` to view the number of cells per sample.\n",
+    "<button onclick=\"toggleVisibility('answer2')\">Click for Answer</button>\n",
+    "<div id=\"answer2\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong> You can run the command <code>adata.obs[\"sample\"].value_counts()</code> to view the number of cells per sample.\n",
     "\n",
     "The output should be:\n",
-    "\n",
+    "<pre>\n",
     "    sample\n",
     "    PBMMC_2         3105\n",
     "    PBMMC_3         2229\n",
     "    PBMMC_1         1612\n",
-    "    Name: count, dtype: int64"
+    "    Name: count, dtype: int64\n",
+    "</pre>\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
    ]
   },
   {
@@ -688,17 +714,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee891c62-e74f-4be9-a068-f0118de78773",
+   "id": "a6862d7f-d3a1-409d-80b1-1facf6841770",
    "metadata": {},
    "source": [
-    "*Answer:* If we type `adata.obs`, a lot more metadata is present compared to before! This should include the following columns:\n",
+    "<button onclick=\"toggleVisibility('answer5')\">Click for Answer</button>\n",
+    "<div id=\"answer5\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong> If we type <code>adata.obs</code>, a lot more metadata is present compared to before! This should include the following columns:\n",
     "\n",
+    "\n",
+    "The output should be:\n",
+    "<pre>\n",
     "    pct_counts_mt\n",
     "    total_counts_mt\n",
     "    pct_counts_ribo\n",
     "    total_counts_ribo\n",
     "    pct_counts_hb\n",
-    "    total_counts_hb"
+    "    total_counts_hb\n",
+    "</pre>\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
    ]
   },
   {
@@ -860,27 +902,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bd2de66-de84-437a-b231-e9eae7f9e183",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 394
-    },
-    "executionInfo": {
-     "elapsed": 630,
-     "status": "ok",
-     "timestamp": 1694431539000,
-     "user": {
-      "displayName": "Alex Lederer",
-      "userId": "09653581722857927737"
-     },
-     "user_tz": -120
-    },
-    "id": "5OVRoqr60wd0",
-    "outputId": "009139d3-926c-41fc-a084-c1c2d8e00466"
-   },
+   "id": "d1455d5f-1e78-46cc-a6be-89f83bb8e9ec",
+   "metadata": {},
    "source": [
-    "**Answer:** Yes there is a negative correlation. Erythrocytes (red blood cells) have a high abundance of hemoglobin transcripts and low abundance of ribosomal transcripts. These are most likely erythroid cells, i.e. the precursor cells for erythrocytes in the bone marrow."
+    "<button onclick=\"toggleVisibility('answer7')\">Click for Answer</button>\n",
+    "<div id=\"answer7\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong> Yes there is a negative correlation. Erythrocytes (red blood cells) have a high abundance of hemoglobin transcripts and low abundance of ribosomal transcripts. These are most likely erythroid cells, i.e. the precursor cells for erythrocytes in the bone marrow.\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
    ]
   },
   {
@@ -1309,14 +1346,6 @@
    "source": [
     "adata.write_h5ad(\"PBMC_analysis_SIB_tutorial.h5ad\") # feel free to choose whichever file name you prefer!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d3610ce-3982-4c3a-9669-32471f9d2bb0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
