--- a/ipynb/day1-3_normalization_scaling.ipynb
+++ b/ipynb/day1-3_normalization_scaling.ipynb
@@ -504,16 +504,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14312706-97bb-4b0b-bd4c-12b440bf91db",
+   "id": "97307d46-4054-4d47-b567-1fb0efb9bd1f",
    "metadata": {},
    "source": [
-    "**Answer:** typing `adata.obs[\"phase\"].value_counts()` should return:\n",
-    "\n",
+    "<button onclick=\"toggleVisibility('answer3')\">Click for Answer</button>\n",
+    "<div id=\"answer3\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong> typing <code>adata.obs[\"phase\"].value_counts()</code> should return:\n",
+    "<pre>\n",
     "    phase\n",
     "    G1      3129\n",
     "    S       1400\n",
     "    G2M     940\n",
-    "    Name: count, dtype: int64"
+    "    Name: count, dtype: int64\n",
+    "</pre>\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
    ]
   },
   {
@@ -587,10 +600,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d367f25e-0009-4b69-80e2-e18df1870bed",
+   "id": "1cc70bba-1ef8-47d6-90d1-2bfd23ea32f5",
    "metadata": {},
    "source": [
-    "**Answer:** `sc.pp.regress_out(adata, 'phase')` is the command you want to apply here"
+    "<button onclick=\"toggleVisibility('answer4')\">Click for Answer</button>\n",
+    "<div id=\"answer4\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong> <code>sc.pp.regress_out(adata, 'phase')</code> is the command you want to apply here.\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
    ]
   },
   {
@@ -654,22 +679,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2675332e-1d28-47e9-8728-30fd006b208b",
+   "id": "6b3fc7e0-3425-4550-bb34-837a5a8d33e9",
    "metadata": {},
    "source": [
-    "**Answer:** `adata.X.mean(axis=0)` should return:\n",
-    "\n",
+    "<button onclick=\"toggleVisibility('answer3')\">Click for Answer</button>\n",
+    "<div id=\"answer3\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong> typing <code>adata.X.mean(axis=0)</code> should return:\n",
+    "<pre>\n",
     "    array([ 9.97964231e-17,  2.44618185e-17,  3.11863822e-17, ...,\n",
     "        4.98982115e-17, -1.55931911e-17, -7.17286791e-17])\n",
+    "</pre>\n",
+    "In other words, values extremely close to zero.    \n",
     "\n",
-    "In other words, values extremely close to zero.\n",
-    "\n",
-    "`adata.X.std(axis=0)` should return:\n",
-    "\n",
+    "<code>adata.X.std(axis=0)</code> should return:\n",
+    "<pre>\n",
     "    array([0.99997257, 0.99997257, 0.99997257, ..., 0.99997257, 0.99997257,\n",
     "       0.99997257])\n",
-    "\n",
-    "In other words, values extremely close to one."
+    "</pre>\n",
+    "In other words, values extremely close to one.\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
    ]
   },
   {
