--- a/course_schedule.qmd
+++ b/course_schedule.qmd
@@ -11,11 +11,11 @@ title: "Course schedule"
 | block   	| start    	| end      	| subject                        	|
 |---------	|----------	|----------	|--------------------------------	|
 | introduction 	| 9:15 AM  	| 9:30 AM 	| [Introduction](ipynb/day1-1_setup.ipynb) |
-| block 1 	| 9:30 AM  	| 10:15 AM 	| [Introduction scRNAseq](ipynb/day1-1_setup.ipynb) |
+| block 1 	| 9:30 AM  	| 10:15 AM 	| [Introduction scRNAseq](ipynb/day1-0_setup.ipynb) |
 |         	| 10:15 AM 	| 10:45 AM 	| BREAK                          	|
 | block 2 	| 10:45 AM 	| 12:00 PM 	| Presentation: Andreia Gouvêa, 10X Field Application Scientist 	     |
 |         	| 12:00 PM 	| 1:00 PM  	| BREAK                          	|
-| block 3 	| 1:00 PM  	| 3:00 PM  	| [Cell Ranger](iypnb/day1-1a_cellranger.ipynb) and [Quality Control](ipynb/day1-2_analysis_tools_qc.ipynb)             	 |
+| block 3 	| 1:00 PM  	| 3:00 PM  	| [Cell Ranger](iypnb/day1-1_cellranger.ipynb) and [Quality Control](ipynb/day1-2_analysis_tools_qc.ipynb)             	 |
 |         	| 3:00 PM  	| 3:30 PM  	| BREAK                          	|
 | block 4 	| 3:30 PM  	| 5:00 PM  	| [Normalization and Scaling](ipynb/day1-3_normalization_scaling.ipynb)                  
 
