add html links to notebook

--- a/ipynb/day1-1_cellranger.ipynb
+++ b/ipynb/day1-1_cellranger.ipynb
@@ -351,6 +351,32 @@
    "source": [
     "**Exercise 3**: We provide you with some `web_summary.html` files. Use what you have learned above to evaluate each one of the experiments and write a short evaluation of what you observe at least ~50 words per each file. When you write a short summary, imagine you are reporting to your supervisor about how the experiment went."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe47e318-6e39-4034-a8ea-b049e07fbd64",
+   "metadata": {},
+   "source": [
+    "<ul>\n",
+    "    <li><a href=\"https://raw.githubusercontent.com/sib-swiss/single-cell-python-training/main/exp1.html\" download=\"exp1.html\">Experiment 1</a></li>\n",
+    "    <li><a href=\"https://raw.githubusercontent.com/sib-swiss/single-cell-python-training/main/exp2.html\" download=\"exp2.html\">Experiment 2</a></li>\n",
+    "    <li><a href=\"https://raw.githubusercontent.com/sib-swiss/single-cell-python-training/main/exp3.html\" download=\"exp3.html\">Experiment 3</a></li>\n",
+    "    <li><a href=\"https://raw.githubusercontent.com/sib-swiss/single-cell-python-training/main/exp4.html\" download=\"exp4.html\">Experiment 4</a></li>\n",
+    "    <li><a href=\"https://raw.githubusercontent.com/sib-swiss/single-cell-python-training/main/exp5.html\" download=\"exp5.html\">Experiment 5</a></li>\n",
+    "    <li><a href=\"https://raw.githubusercontent.com/sib-swiss/single-cell-python-training/main/exp6.html\" download=\"exp6.html\">Experiment 6</a></li>\n",
+    "    <li><a href=\"https://raw.githubusercontent.com/sib-swiss/single-cell-python-training/main/exp7.html\" download=\"exp7.html\">Experiment 7</a></li>\n",
+    "    <li><a href=\"https://raw.githubusercontent.com/sib-swiss/single-cell-python-training/main/exp8.html\" download=\"exp8.html\">Experiment 8</a></li>\n",
+    "    <li><a href=\"https://raw.githubusercontent.com/sib-swiss/single-cell-python-training/main/exp9.html\" download=\"exp9.html\">Experiment 9</a></li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eeae8a5-84be-4d51-acb4-dd522c8c4314",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
