--- a/ipynb/day1-2_analysis_tools_qc.ipynb
+++ b/ipynb/day1-2_analysis_tools_qc.ipynb
@@ -28,7 +28,8 @@
    "id": "c6e571ea-e947-4c2d-ba46-b33fa27b94da",
    "metadata": {},
    "source": [
-    "After having completed this chapter you will be able to:\n",
+    "## Learning outcomes\n",
+    "**After having completed this chapter you will be able to:**\n",
     "\n",
     "- Load single cell data into Python.\n",
     "- Explain the basic structure of a AnnData object and extract count data and metadata.\n",
