--- a/ipynb/day1-3_normalization_scaling.ipynb
+++ b/ipynb/day1-3_normalization_scaling.ipynb
@@ -1,9 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3e1a2dd5-c4a8-4dbd-adf5-0ce5b3f507fb",
+   "metadata": {},
+   "source": [
+    "# Normalization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73671bd3-e64f-473d-aa4a-c5cc6a34d0d2",
+   "metadata": {},
+   "source": [
+    "## Learning outcomes\n",
+    "**After having completed this chapter you will be able to:**\n",
+    "\n",
+    "- Perform size normalization and log transformation of single-cell data.\n",
+    "- Intuitively understand what \"normalization\" does to your data\n",
+    "- Identifying highly variable gene features\n",
+    "- Perform data scaling\n",
+    "- Assign categorical cell cycle phases to single cells"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ddaaecc1-60de-4f02-82d6-ae88a4466000",
+   "execution_count": 17,
+   "id": "e0963dd2-7e7b-4100-9282-b8486f4605dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,23 +46,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "9146c377-eaa8-4d42-b664-a950d8cf1e7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata = sc.read_h5ad(\"PBMC_analysis_SIB_tutorial.h5ad\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "bcc421bf-c0ec-4052-8fe8-2fe537f2aa91",
-   "metadata": {
-    "id": "R8-CCCAG0wd2"
-   },
+   "id": "ac886f09-21f5-449e-bdb7-3439443c5b16",
+   "metadata": {},
    "source": [
-    "## Normalization"
+    "<button onclick=\"toggleVisibility('answer0')\">Click for Answer</button>\n",
+    "<div id=\"answer0\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong> Load your data from the previous notebook into an h5ad object with <code>sc.read_h5ad</code>\n",
+    "<pre>\n",
+    "    adata = sc.read_h5ad(\"PBMC_analysis_SIB_tutorial.h5ad\")\n",
+    "</pre>\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
    ]
   },
   {
@@ -92,6 +118,31 @@
    },
    "source": [
     "**Exercise 1:** Perform normalization using the logarithm shift, following the above formula. Without relying on `scanpy` implemented function, you should be able to compute the log-normalized data, and store the resulting matrix in the object `log_shifted_matrix` below. We then provide code to display the distribution of the raw counts versus the normalized data *_(exercise courtesy of Alexandre Coudray)_*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9caffa4c-2c3f-4f95-8277-0c4dc71f35a2",
+   "metadata": {},
+   "source": [
+    "<button onclick=\"toggleVisibility('answer1')\">Click for Answer</button>\n",
+    "<div id=\"answer1\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong>\n",
+    "<pre>\n",
+    "    median_raw_counts = np.median(adata.obs['n_counts'])\n",
+    "    size_factors = np.array(adata.obs['n_counts'] / median_raw_counts)\n",
+    "    log_shifted_matrix = np.log(adata.X / size_factors[:,None] + 1) # we use a pseudo-count of 1\n",
+    "</pre>\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
    ]
   },
   {
@@ -314,35 +365,40 @@
     "id": "WpQNR6lF185h"
    },
    "source": [
-    "We then run it again so that the normalized data is set as our default matrix in `.X` emplacement."
+    "We then run the `normalized_total` and `log1p` functions it again so that the normalized data is set as our default matrix in `.X` emplacement."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "d155fb64-f321-49ab-913f-566fedce3985",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 1298,
-     "status": "ok",
-     "timestamp": 1694340174898,
-     "user": {
-      "displayName": "Alex Lederer",
-      "userId": "09653581722857927737"
-     },
-     "user_tz": -120
-    },
-    "id": "L-qOZg1u0wd3",
-    "outputId": "7fcd87da-51fc-4828-af60-2e6b6d5b580f"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "cf76c252-4a94-43ce-a286-3f4fe52d17cc",
+   "metadata": {},
    "source": [
-    "# To directly change the data 'in place', use the following:\n",
-    "sc.pp.normalize_total(adata, target_sum=None)\n",
-    "sc.pp.log1p(adata)"
+    "**Exercise 2**: Perform normalization and log transformation using the built in `scanpy` functions, as hinted at above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d0998b8-a007-4ae9-a60e-0e4ecec09632",
+   "metadata": {},
+   "source": [
+    "<button onclick=\"toggleVisibility('answer2')\">Click for Answer</button>\n",
+    "<div id=\"answer2\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong>\n",
+    "<pre>\n",
+    "    # To directly change the data 'in place', use the following:\n",
+    "    sc.pp.normalize_total(adata, target_sum=None)\n",
+    "    sc.pp.log1p(adata)\n",
+    "</pre>\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
    ]
   },
   {
@@ -390,7 +446,7 @@
     "id": "RXtaBNOj0wd3"
    },
    "source": [
-    "**Exercise 2**: Perform cell cycle characterization on your dataset. Plot a scatter plot of the S_score and G2M_score metadata created and stored in your AnnData object. Color the points by the assigned cell cycle phase. What percentage of your cells are in a proliferative state (S or G2M phases)?"
+    "**Exercise 3**: Perform cell cycle characterization on your dataset. Plot a scatter plot of the S_score and G2M_score metadata created and stored in your AnnData object. Color the points by the assigned cell cycle phase. What percentage of your cells are in a proliferative state (S or G2M phases)?"
    ]
   },
   {
@@ -499,7 +555,7 @@
    "id": "fe57012c-42cd-4a77-b719-c18d921e1e9e",
    "metadata": {},
    "source": [
-    "**Exercise 3**: How many cells do you have assigned to each of the cell cycle phases? Can you check this using a function you have applied in the previous exercises?"
+    "**Exercise 4**: How many cells do you have assigned to each of the cell cycle phases? Can you check this using a function you have applied in the previous exercises?"
    ]
   },
   {
@@ -507,8 +563,8 @@
    "id": "97307d46-4054-4d47-b567-1fb0efb9bd1f",
    "metadata": {},
    "source": [
-    "<button onclick=\"toggleVisibility('answer3')\">Click for Answer</button>\n",
-    "<div id=\"answer3\" style=\"display:none;\">\n",
+    "<button onclick=\"toggleVisibility('answer4')\">Click for Answer</button>\n",
+    "<div id=\"answer4\" style=\"display:none;\">\n",
     "<strong>Answer:</strong> typing <code>adata.obs[\"phase\"].value_counts()</code> should return:\n",
     "<pre>\n",
     "    phase\n",
@@ -595,7 +651,7 @@
    "id": "dd06e008-7149-476f-ac3f-78eaaea642eb",
    "metadata": {},
    "source": [
-    "**Exercise 4**: Use scanpy's `regress_out` function to remove the effect of the cell cycle `phase` metadata from your downstream analyses steps."
+    "**Exercise 5**: Use scanpy's `regress_out` function to remove the effect of the cell cycle `phase` metadata from your downstream analyses steps."
    ]
   },
   {
@@ -603,8 +659,8 @@
    "id": "1cc70bba-1ef8-47d6-90d1-2bfd23ea32f5",
    "metadata": {},
    "source": [
-    "<button onclick=\"toggleVisibility('answer4')\">Click for Answer</button>\n",
-    "<div id=\"answer4\" style=\"display:none;\">\n",
+    "<button onclick=\"toggleVisibility('answer5')\">Click for Answer</button>\n",
+    "<div id=\"answer5\" style=\"display:none;\">\n",
     "<strong>Answer:</strong> <code>sc.pp.regress_out(adata, 'phase')</code> is the command you want to apply here.\n",
     "<script>\n",
     "function toggleVisibility(id) {\n",
@@ -674,7 +730,7 @@
    "id": "bf02196f-d656-4fdd-9e99-b2bc4ce8d490",
    "metadata": {},
    "source": [
-    "**Exercise 5**: Can you use the commands adata.X.mean() to check whether this method is successfully scaling the mean of each gene to be equal to 0, and adata.X.std() to check whether this method is successfully scaling the standard deviation of each gene to be equal to 1? Important: don't forget to take the mean for each **gene** by specifying `axis=0`!"
+    "**Exercise 6**: Can you use the commands adata.X.mean() to check whether this method is successfully scaling the mean of each gene to be equal to 0, and adata.X.std() to check whether this method is successfully scaling the standard deviation of each gene to be equal to 1? Important: don't forget to take the mean for each **gene** by specifying `axis=0`!"
    ]
   },
   {
@@ -682,8 +738,8 @@
    "id": "6b3fc7e0-3425-4550-bb34-837a5a8d33e9",
    "metadata": {},
    "source": [
-    "<button onclick=\"toggleVisibility('answer5')\">Click for Answer</button>\n",
-    "<div id=\"answer5\" style=\"display:none;\">\n",
+    "<button onclick=\"toggleVisibility('answer6')\">Click for Answer</button>\n",
+    "<div id=\"answer6\" style=\"display:none;\">\n",
     "<strong>Answer:</strong> typing <code>adata.X.mean(axis=0)</code> should return:\n",
     "<pre>\n",
     "    array([ 9.97964231e-17,  2.44618185e-17,  3.11863822e-17, ...,\n",
