--- a/ipynb/day2-1_dimensionality_reduction.ipynb
+++ b/ipynb/day2-1_dimensionality_reduction.ipynb
@@ -1,9 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "91fe6e42-ae49-4579-bcf0-1e87d9d3087a",
+   "metadata": {},
+   "source": [
+    "# Dimensionality Reduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f78a3699-243e-4ffd-b6e0-d08b567caa7f",
+   "metadata": {},
+   "source": [
+    "## Learning outcomes\n",
+    "**After having completed this chapter you will be able to:**\n",
+    "\n",
+    "- Understand the differences between PCA and UMAP\n",
+    "- Perform PCA and select a reasonable number of components for downstream UMAP embeddings\n",
+    "- Visualize the contribution of different genes to each principal component"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a0fb383b-ce44-42dc-bfd2-d51390623f5e",
+   "execution_count": 17,
+   "id": "a277a4ee-4250-4d62-a815-4c5bd6687791",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +44,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b267f673-d125-4170-92b9-2ae022db576f",
+   "cell_type": "markdown",
+   "id": "9fba16f2-30b2-484b-97d4-7772f5fe3f90",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "adata = sc.read_h5ad(\"PBMC_analysis_SIB_tutorial2.h5ad\")"
+    "<button onclick=\"toggleVisibility('answer0')\">Click for Answer</button>\n",
+    "<div id=\"answer0\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong> Load your data from the previous notebook into an h5ad object with <code>sc.read_h5ad</code>\n",
+    "<pre>\n",
+    "    adata = sc.read_h5ad(\"PBMC_analysis_SIB_tutorial2.h5ad\")\n",
+    "</pre>\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
    ]
   },
   {
@@ -598,30 +632,6 @@
    "source": [
     "adata.write_h5ad(\"PBMC_analysis_SIB_tutorial3.h5ad\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "011c2ff3-46e6-4cf9-add1-463e383ffe51",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 9,
-     "status": "ok",
-     "timestamp": 1694340427919,
-     "user": {
-      "displayName": "Alex Lederer",
-      "userId": "09653581722857927737"
-     },
-     "user_tz": -120
-    },
-    "id": "o7Cx9cAGSYI0",
-    "outputId": "3944c24c-4498-4beb-ec1c-aae1dbb1a7ef"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
