--- a/ipynb/day2-2_integration.ipynb
+++ b/ipynb/day2-2_integration.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "99fbecb8-e6e1-4fef-9246-944f0f4a1eb3",
+   "metadata": {},
+   "source": [
+    "# Data Integration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4cd01774-f4da-461d-9ef2-fb73e3b30ccb",
+   "id": "cc34b3db-85ce-4642-b8f8-42d74b990aa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +37,22 @@
     "id": "ntUf6YPK0wd5"
    },
    "source": [
-    "## Integration and batch effect correction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b17bec92-46e3-467e-bcc8-713121c1d21b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata = sc.read_h5ad(\"PBMC_analysis_SIB_tutorial3.h5ad\")"
+    "<button onclick=\"toggleVisibility('answer0')\">Click for Answer</button>\n",
+    "<div id=\"answer0\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong> Load your data from the previous notebook into an h5ad object with <code>sc.read_h5ad</code>\n",
+    "<pre>\n",
+    "    adata = sc.read_h5ad(\"PBMC_analysis_SIB_tutorial3.h5ad\")\n",
+    "</pre>\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
    ]
   },
   {
@@ -248,14 +261,6 @@
    "source": [
     "adata.write_h5ad(\"PBMC_analysis_SIB_tutorial4.h5ad\") # save your results!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85be260c-7fd5-4a04-8315-ed0daff95e02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
