--- a/ipynb/day1-1_cellranger.ipynb
+++ b/ipynb/day1-1_cellranger.ipynb
@@ -5,7 +5,7 @@
    "id": "d812ca99-21e8-47ba-817c-7d142c05e714",
    "metadata": {},
    "source": [
-    "# Introduction and Cell Ranger"
+    "# Cell Ranger"
    ]
   },
   {
@@ -17,9 +17,9 @@
     "\n",
     "**After having completed this chapter you will be able to:**\n",
     "\n",
-    "- Explain what kind of information single cell RNA-seq can give you to answer a biological question\n",
-    "- Describe essential considerations during the design of a single cell RNA-seq experiment\n",
-    "- Describe the pros and cons of different single cell sequencing methods\n",
+    "- Explain what kind of information single-cell RNA-seq (scRNA-seq) can give you to answer a biological question\n",
+    "- Describe essential considerations during the design of a single-cell RNA-seq experiment\n",
+    "- Describe the pros and cons of different single-cell sequencing methods\n",
     "- Use cellranger to:\n",
     "    - To align reads and generate count tables\n",
     "    - Perform basic QC on alignments and counts"
@@ -41,6 +41,7 @@
     "The exercises below assume that you are enrolled in the course, and have access to the server. **These exercises are not essential to run for the rest of the course**, so you can skip them. If you want to do them anyway, you can try to [install `cellranger` locally](https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/installation) (only on Linux or WSL). In addition, you will need to download the references. You can get it by with this code (choose your OS):\n",
     "\n",
     "## Linux/MacOS/WSL\n",
+    "Run the following commands in the terminal or other command line prompt application:\n",
     "```\n",
     "    wget https://single-cell-transcriptomics.s3.eu-central-1.amazonaws.com/cellranger_index.tar.gz\n",
     "    tar -xvf cellranger_index.tar.gz\n",
@@ -57,6 +58,7 @@
    "id": "cd023e06-9040-405e-b924-8b9e7ab00cec",
    "metadata": {},
    "source": [
+    "## Data overview\n",
     "Have a look in the directory `course_data/reads` and `/data/cellranger_index`. In the `reads` directory you will find reads on one sample: `ETV6-RUNX1_1`. In the analysis part of the course we will work with six samples, but due to time and computational limitations we will run `cellranger count` on one of the samples, and only reads originating from chromsome 21 and 22. \n",
     "\n",
     "The input you need to run `cellranger count` are the sequence reads and a reference. Here, we have prepared a reference only with chromosome 21 and 22, but in 'real life' you would of course get the full reference genome of your species. The reference has a specific format. You can download precomputed human and mouse references from the [10X website](https://support.10xgenomics.com/single-cell-gene-expression/software/downloads/latest). If your species of interest is not one of those, you will have to generate it yourself. For that, have a look [here](https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/using/tutorial_mr).\n",
@@ -188,7 +190,7 @@
    "id": "6e4cdd74-3138-4a0e-96a5-ecbb98f11495",
    "metadata": {},
    "source": [
-    "The run summary from cellranger count can be viewed by clicking \"Summary\" in the top left corner. The summary metrics describe sequencing quality and various characteristics of the detected cells. Similar web summaries are also output from the cellranger reanalyze and cellranger aggr pipelines.\n",
+    "The run summary from cellranger count can be viewed by clicking \"Summary\" in the top left corner. The summary metrics describe sequencing quality and various characteristics of the detected cells. Similar web summaries are also output from the `cellranger reanalyze` and `cellranger aggr` pipelines.\n",
     "\n",
     "This report will serve you as first-line feedback on how the experiment went. It provides an easily accessible summary to scrutinize the success of the experiment.\n",
     "\n",
@@ -200,28 +202,62 @@
     "- Was the sample sequenced deep enough? Where the cells intact and well?\n",
     "- Is the quality of the cells uniform?\n",
     "\n",
-    "Note that some of these questions will be more definitively answered during a successive (more hands-on) part of QC process. Consider this just the beginning of the scrutiny.\n",
+    "Note that some of these questions will be more definitively answered during a successive (more hands-on) part of quality control (QC) process. Consider this just the beginning of the scrutiny.\n",
     "\n",
-    "**\\*Basic QC metrics\\***\n",
+    "**Basic QC metrics**\n",
     "\n",
     "The number of cells detected, the mean reads per cell, and the median genes detected per cell are prominently displayed near the top of the page.\n",
     "\n",
     "![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.002.jpeg)\n",
     "\n",
-    "*Estimated Cell number -* is determined from the number of cell barcodes with ‘reasonable’ numbers of observations. This number is an *estimate* because there is no binary flag “full/empty” that tell us if a droplet had or not a cell inside. Every droplet will enter in contact with some free-floating RNA, therefore some threshold needs to be set to cell associated barcodes vs noise from empty GEMs. However, this threshold cannot be a fixed number as it will depend on the overall quality of the experiment, size of the cells and depth of the sequences and mis-called sequences. So, this number automatically estimated from the “Barcode Rank Plot” that we will see below.\n",
+    "*Estimated Cell number:* This is determined from the number of cell barcodes with a 'reasonable' numbers of observations. This number is an *estimate* because there is no binary flag “full/empty” that tell us if a droplet had a cell inside or not. Every droplet will enter in contact with some free-floating RNA, therefore some threshold needs to be set to cell-associated barcodes vs noise from empty GEMs. However, this threshold cannot be a fixed number as it will depend on the overall quality of the experiment, size of the cells and depth of the sequences and mis-called sequences. So, this number automatically estimated from the \"Barcode Rank Plot\" that we will see below.\n",
     "\n",
-    "Note: this number is estimated using the thresholds to cellranger count as a bias, if the threshold is changed the count can give different predictions, and in some cases it will be necessary to do so. For example. to account for a not-so-successful experiment with high level of free-floating mRNA in the input cell suspension or a lysis caused mixing the RT mix with the cell suspension.\n",
+    "Note: this number is estimated using the thresholds to `cellranger count` as a bias, if the threshold is changed the count can give different predictions, and in some cases it will be necessary to do so. For example: to account for a not-so-successful experiment with high level of free-floating mRNA in the input cell suspension or a lysis caused mixing the RT mix with the cell suspension.\n",
     "\n",
-    "*Mean Read per cell* - This is the mean of sequencing reads that is obtained on average to the cells. Note that this refers only to the ones counted in “Estimated number of cells” and therefore: \n",
+    "*Mean Read per cell:* This is the mean of sequencing reads that is obtained on average to the cells. Note that this refers only to the ones counted in \"Estimated number of cells\" and therefore: \n",
     "\n",
     "*Estimated\\_Cell\\_number \\* Mean\\_Read\\_per\\_cell ≠ Illumina\\_Reads*.\n",
     "\n",
-    "Also note that this number DOES NOT correspond to the number of UMI per cells (the value that is actually used for the analysis).\n",
+    "Also note that this number DOES NOT correspond to the number of UMI per cells (the value that is actually used for the analysis)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ce3699a-e95f-4695-ab1a-32116846b8b7",
+   "metadata": {},
+   "source": [
+    "**Exercise 3**: On the basis of what learned in the lectures and above, can you explain how \"Mean Reads per cell\" and \"UMI count\" are related? How is \"UMI count\" obtained by the pipeline? Will doubling the number of reads double the number of UMIs?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55e6f9c2-0f76-412c-926b-383de98d4390",
+   "metadata": {},
+   "source": [
+    "<button onclick=\"toggleVisibility('answer3')\">Click for Answer</button>\n",
+    "<div id=\"answer3\" style=\"display:none;\">\n",
+    "The mean reads per cell is the number of FASTQ READS containing a cell barcode assigned to a particular cell. The UMI count is the number of unique RNA MOLECULES that were sequenced assigned to a particular gene and cell. The cellranger pipeline determines the UMI count using the UMI barcode, which is different from the cell barcode. The UMI barcode is unique to each distinct RNA molecule in a cell. So, there is a possibility of multiple reads containing the same UMI barcode and being \"collapsed\" into a single count for the UMI count. \n",
+    "    \n",
+    "Doubling the number of reads will likely increase the number of UMIs, due to the detection of new RNA molecules with increased sequencing depth, but it will not double the number of UMIs because many additional reads will be assigned to the same RNA/UMI barcode.\n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77153a82-2c07-4818-859e-2c30cc62ea8e",
+   "metadata": {},
+   "source": [
     "\n",
-    "On the basis of what learned in the lectures can you explain how Mean Reads per cell and UMI count are related? How is UMI count obtained by the pipeline? Will doubling the number of reads double the number of UMIs?\n",
-    "\n",
-    "\n",
-    "**\\*Diagnostic QC metrics – Sequencing\\***\n",
+    "**Diagnostic QC metrics – Sequencing**\n",
     "\n",
     "![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.003.jpeg)\n",
     "\n",
@@ -286,7 +322,7 @@
     "\n",
     "Fraction of reads confidently mapped to the transcriptome, but on the opposite strand of their annotated gene. A read is counted as antisense if it has any alignments that are consistent with an exon of a transcript but antisense to it, and has no sense alignments.\n",
     "\n",
-    "## **\\*Ranked Barcode Plot\\***\n",
+    "## Ranked Barcode Plot\n",
     "\n",
     "The Barcode Rank Plot under the \"Cells\" dashboard shows the distribution of barcode counts and which barcodes were inferred to be associated with cells. It is one of the most informative QC plots, it enables one to assess sample quality and to formulate hypothesis of what might have gone wrong if the experiment was not perfectly successful.\n",
     "\n",
@@ -311,7 +347,7 @@
     "- It uses a cutoff based on total UMI counts of each barcode to identify cells. This step identifies the primary mode of high RNA content cells.\n",
     "- ![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.005.jpeg)Then the algorithm uses the RNA profile of each remaining barcode to determine if it is an “empty\" or a cell containing partition. This second step captures low RNA content cells, whose total UMI counts may be similar to empty GEMs.\n",
     "\n",
-    "**\\*Saturation - is there a gain in sequencing more?\\***\n",
+    "**Saturation - is there a gain in sequencing more?**\n",
     "\n",
     "The sequencing saturation plot allows the user to assess the relative tradeoffs of sequencing deeper or shallower. As sequencing saturation increases, the total number of molecules detected in the library increases, but with diminishing returns as saturation is approached.\n",
     "\n",
@@ -319,7 +355,7 @@
     "\n",
     "![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.006.jpeg)![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.007.jpeg)\n",
     "\n",
-    "## **\\*Analysis view\\***\n",
+    "## Analysis view\n",
     "\n",
     "The automated secondary analysis results can be viewed by clicking \"Analysis\" in the top left corner. The secondary analysis provides the following:\n",
     "\n",
@@ -333,7 +369,7 @@
     "\n",
     "Plots showing the effect of decreased sequencing depth on observed library complexity and on median genes per cell detected\n",
     "\n",
-    "## **\\*Troubleshooting: when things go bad\\***\n",
+    "## Troubleshooting: when things go bad\n",
     "![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.009.jpeg)\n",
     "\n",
     "![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.010.jpeg)\n",
@@ -349,7 +385,7 @@
    "id": "221d0a85-dccb-42eb-ad02-f67edfdb9efd",
    "metadata": {},
    "source": [
-    "**Exercise 3**: We provide you with some `web_summary.html` files. Use what you have learned above to evaluate each one of the experiments and write a short evaluation of what you observe at least ~50 words per each file. When you write a short summary, imagine you are reporting to your supervisor about how the experiment went."
+    "**Exercise 4**: We provide you with some `web_summary.html` files. Use what you have learned above to evaluate each one of the experiments and write a short evaluation of what you observe at least ~50 words per each file. When you write a short summary, imagine you are reporting to your supervisor about how the experiment went."
    ]
   },
   {
@@ -369,14 +405,6 @@
     "    <li><a href=\"https://raw.githubusercontent.com/sib-swiss/single-cell-python-training/main/exp9.html\" download=\"exp9.html\">Experiment 9</a></li>\n",
     "</ul>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6eeae8a5-84be-4d51-acb4-dd522c8c4314",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
