adds presentations to notebook

--- a/ipynb/day1-1_cellranger.ipynb
+++ b/ipynb/day1-1_cellranger.ipynb
@@ -10,6 +10,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "781b1f69",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    .large-link {\n",
+    "        font-size: 30px;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "        color: #333;\n",
+    "        text-decoration: none;\n",
+    "    }\n",
+    "</style>\n",
+    "<a href=\"../assets/pdf/01_introduction.pdf\" target=\"_blank\" class=\"large-link\">Presentation: General introduction</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9796e04f",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    .large-link {\n",
+    "        font-size: 30px;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "        color: #333;\n",
+    "        text-decoration: none;\n",
+    "    }\n",
+    "</style>\n",
+    "<a href=\"../assets/pdf/02_introduction_scRNAseq.pdf\" target=\"_blank\" class=\"large-link\">Presentation: Introduction to scRNA-seq</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fc720e49-8a41-4769-b1da-8368e8d58238",
    "metadata": {},
    "source": [
