added setup notebook with jupyter tutorial

--- a/ipynb/day2-3_clustering.ipynb
+++ b/ipynb/day2-3_clustering.ipynb
@@ -5,7 +5,7 @@
    "id": "438fee88-5c8e-45f8-8414-2cbba8be31e7",
    "metadata": {},
    "source": [
-    "# Clustering"
+    "# Clustering and cell annotation"
    ]
   },
   {
