bug with answer reveal boxes

--- a/ipynb/day1-2_analysis_tools_qc.ipynb
+++ b/ipynb/day1-2_analysis_tools_qc.ipynb
@@ -746,6 +746,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e847ca1-3356-4b69-bf67-17ba89904563",
+   "metadata": {},
+   "source": [
+    "## Plotting experiment metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ecadb03-4419-4634-9f6a-b05201ac7314",
    "metadata": {},
    "source": [
@@ -919,6 +927,14 @@
     "   }\n",
     "}\n",
     "</script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5d29e16-d464-415c-bc62-c49394bcc3e5",
+   "metadata": {},
+   "source": [
+    "## Plotting genes express as a function of total counts"
    ]
   },
   {
