update cellranger notebook

--- a/ipynb/day1-1_setup.ipynb
+++ b/ipynb/day1-1_setup.ipynb
@@ -21,7 +21,7 @@
    "id": "d0c1bbac-a41a-4604-b55c-2797849f807e",
    "metadata": {},
    "source": [
-    "If you are enrolled in the course, log in the Jupyter notebook server with the provided link, username and password. The environment on the server contains all the necessary software pre-installed."
+    "If you are enrolled in the course, log on the server with the provided link, username, and password. The environment on the server contains all the necessary software pre-installed."
    ]
   },
   {
@@ -50,7 +50,7 @@
     "1. Other => Terminal\n",
     "2. \"Notebook => Python 3 (ipykernel)\n",
     "\n",
-    "Option (1) opens a command line prompt, which will be necessary for downloading the data and running cellranger. For the other exercises in Python, you will write your code in a Jupyter Lab notebook. This can be opened with the option (2). A Jupyter notebook is like a virtual laboratory notebook: you enter code into different \"cells\" and run those lines of code to read/write data, perform analyses, and make data visualizations. Also, a Jupyter notebook can be re-run multiple times to produce the same (reproducible) output!"
+    "Option (1) opens a command line prompt, which will be necessary for downloading the data and running cellranger. For the other exercises in Python, you will write your code in a Jupyter Lab notebook, which can be opened with the option (2). A Jupyter notebook is like a virtual laboratory notebook: you enter code into different \"cells\" and run those lines of code to read/write data, perform analyses, and make data visualizations. Also, a Jupyter notebook can be re-run multiple times to produce the same (reproducible) output!"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "id": "024db239-a58d-460c-8e31-8545d96b3c3f",
    "metadata": {},
    "source": [
-    "You can also run a selected code cell by clicking on it and entering SHIFT + RETURN/ENTER."
+    "You can also run a selected code cell by clicking on it and entering SHIFT + RETURN (SHIFT + ENTER on a PC)."
    ]
   },
   {
@@ -162,7 +162,7 @@
    "id": "700c3b89-79b1-4ca3-81cb-fe2c285ab96e",
    "metadata": {},
    "source": [
-    "On the left hand side of the page, you will send your current directory containing various notebooks, data files, and folders that you create throughout the course. For example:"
+    "On the left hand side of the page, you will see your current directory containing various notebooks, data files, and folders that you create throughout the course. For example:"
    ]
   },
   {
@@ -178,22 +178,19 @@
    "id": "292ad3a5-5e84-4a23-a5dd-6cf8c22ffd8e",
    "metadata": {},
    "source": [
-    "### Downloading the course data\n",
+    "## Downloading the course data\n",
     "\n",
     "To download and extract the dataset, copy-paste these commands inside the terminal tab:\n",
     "\n",
     "```{bash}\n",
-    "#| output: false\n",
     "wget https://single-cell-transcriptomics-python.s3.eu-central-1.amazonaws.com/course_data.tar.gz\n",
     "tar -xvf course_data.tar.gz\n",
     "rm course_data.tar.gz\n",
     "```\n",
     "\n",
-    "::: {.callout-note}\n",
-    "## If on Windows\n",
+    "### If on Windows\n",
     "\n",
     "If you're using Windows, you can directly open the [link](https://single-cell-transcriptomics-python.s3.eu-central-1.amazonaws.com/course_data.tar.gz) in your browser, and downloading will start automatically. Unpack the tar.gz file in the directory where you want to work in during the course.\n",
-    "::: \n",
     "\n",
     "Have a look at the data directory you have downloaded. It should contain the following:\n",
     "\n",
