--- a/ipynb/day1-1_cellranger.ipynb
+++ b/ipynb/day1-1_cellranger.ipynb
@@ -170,6 +170,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e92ccad-236e-4a0a-b11e-cad7e5e1ebe1",
+   "metadata": {},
+   "source": [
+    "## Opening `cellranger` output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "97c1a7e2-8448-43bc-a026-7068009a31c5",
    "metadata": {},
    "source": [
@@ -289,68 +297,68 @@
    "metadata": {},
    "source": [
     "\n",
-    "**Diagnostic QC metrics – Sequencing**\n",
+    "### Diagnostic QC metrics – Sequencing\n",
     "\n",
     "![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.003.jpeg)\n",
     "\n",
     "\n",
-    "**Number of Reads**\n",
+    "#### Number of Reads\n",
     "\n",
     "Total number of read pairs that were assigned to this library in demultiplexing.\n",
     "\n",
-    "**Valid Barcodes**\n",
+    "#### Valid Barcodes\n",
     "\n",
     "Fraction of reads with barcodes that match the whitelist after barcode correction.\n",
     "\n",
-    "**Sequencing Saturation**\n",
+    "#### Sequencing Saturation\n",
     "\n",
     "The fraction of reads originating from an already-observed UMI. This is a function of library complexity and sequencing depth. More specifically, this is the fraction of confidently mapped, valid cell-barcode, valid UMI reads that had a non-unique (cell-barcode, UMI, gene). This metric was called \"cDNA PCR Duplication\" in versions of Cell Ranger prior to 1.2.\n",
     "\n",
-    "**Q30 Bases in Barcode**\n",
+    "#### Q30 Bases in Barcode\n",
     "\n",
     "Fraction of cell barcode bases with Q-score >= 30, excluding very low quality/no-call (Q <= 2) bases from the denominator.\n",
     "\n",
-    "**Q30 Bases in RNA Read**\n",
+    "#### Q30 Bases in RNA Read\n",
     "\n",
     "Fraction of RNA read bases with Q-score >= 30, excluding very low quality/no-call (Q <= 2) bases from the denominator. This is Read 1 for the Single Cell 3' v1 chemistry and Read 2 for the Single Cell 3' v2 chemistry.\n",
     "\n",
-    "**Q30 Bases in Sample Index**\n",
+    "#### Q30 Bases in Sample Index\n",
     "\n",
     "Fraction of sample index bases with Q-score >= 30, excluding very low quality/no-call (Q <= 2) bases from the denominator.\n",
     "\n",
-    "**Q30 Bases in UMI**\n",
+    "#### Q30 Bases in UMI\n",
     "\n",
     "Fraction of UMI bases with Q-score >= 30, excluding very low quality/no-call (Q <= 2) bases from the denominator.\n",
     "\n",
-    "**\\*Diagnostic QC metrics – Mapping\\***\n",
+    "### Diagnostic QC metrics – Mapping\n",
     "\n",
     "![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.004.jpeg)\n",
     "\n",
-    "**Reads Mapped to Genome**\n",
+    "#### Reads Mapped to Genome\n",
     "\n",
     "Fraction of reads that mapped to the genome.\n",
     "\n",
-    "**Reads Mapped Confidently to Genome**\n",
+    "#### Reads Mapped Confidently to Genome\n",
     "\n",
     "Fraction of reads that mapped uniquely to the genome. If a gene mapped to exonic loci from a single gene and also to non-exonic loci, it is considered uniquely mapped to one of the exonic loci.\n",
     "\n",
-    "**Reads Mapped Confidently to Intergenic Regions**\n",
+    "#### Reads Mapped Confidently to Intergenic Regions\n",
     "\n",
     "Fraction of reads that mapped uniquely to an intergenic region of the genome.\n",
     "\n",
-    "**Reads Mapped Confidently to Intronic Regions**\n",
+    "#### Reads Mapped Confidently to Intronic Regions\n",
     "\n",
     "Fraction of reads that mapped uniquely to an intronic region of the genome.\n",
     "\n",
-    "**Reads Mapped Confidently to Exonic Regions**\n",
+    "#### Reads Mapped Confidently to Exonic Regions\n",
     "\n",
     "Fraction of reads that mapped uniquely to an exonic region of the genome.\n",
     "\n",
-    "**Reads Mapped Confidently to Transcriptome**\n",
+    "#### Reads Mapped Confidently to Transcriptome\n",
     "\n",
     "Fraction of reads that mapped to a unique gene in the transcriptome. The read must be consistent with annotated splice junctions. These reads are considered for UMI counting.\n",
     "\n",
-    "**Reads Mapped Antisense to Gene**\n",
+    "#### Reads Mapped Antisense to Gene\n",
     "\n",
     "Fraction of reads confidently mapped to the transcriptome, but on the opposite strand of their annotated gene. A read is counted as antisense if it has any alignments that are consistent with an exon of a transcript but antisense to it, and has no sense alignments.\n",
     "\n",
@@ -379,7 +387,7 @@
     "- It uses a cutoff based on total UMI counts of each barcode to identify cells. This step identifies the primary mode of high RNA content cells.\n",
     "- ![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.005.jpeg)Then the algorithm uses the RNA profile of each remaining barcode to determine if it is an “empty\" or a cell containing partition. This second step captures low RNA content cells, whose total UMI counts may be similar to empty GEMs.\n",
     "\n",
-    "**Saturation - is there a gain in sequencing more?**\n",
+    "## Saturation - is there a gain in sequencing more?\n",
     "\n",
     "The sequencing saturation plot allows the user to assess the relative tradeoffs of sequencing deeper or shallower. As sequencing saturation increases, the total number of molecules detected in the library increases, but with diminishing returns as saturation is approached.\n",
     "\n",
